<resources>
    <string name="app_name">PainMApp</string>
    <string name="patientCode">Código del paciente</string>
    <string name="researcherName">Nombre del investigador</string>
    <string name="sensorySymptoms">Síntomas sensitivos</string>
    <string name="psychosocial">Evaluación psicosocial</string>
    <string name="motorSymptoms">Síntomas motores</string>
    <string name="summary">Resumen</string>
    <string name="newPatient">Nuevo paciente</string>
    <string name="openDrawerContentDescRes">openDrawer</string>
    <string name="closeDrawerContentDescRes">closeDrawer</string>
    <string name="patient">Paciente</string>
    <string name="researcher">Investigador/a</string>
    <string name="next">Siguente</string>
    <string name="front_body">Cuerpo de frente</string>
    <string name="front">frente</string>
    <string name="back_body">Cuerpo de espaldas</string>
    <string name="back">espalda</string>
    <string name="add_symptom">Añada un síntoma</string>
    <string name="symptom">Síntoma</string>
    <string name="score">intensidad</string>
    <string name="localization">Localización</string>
    <string name="brush_width">Anchura del pincel</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="right">Derecha</string>
    <string name="left">Izquierda</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="painmapp">PainMApp</string>
    <string name="description_symptom">Descripción del síntoma</string>
    <string name="pain">Dolor</string>
    <string name="itch">Picor</string>
    <string name="burn">Quemazón</string>
    <string name="sharp">Punzante</string>
    <string name="other">Otro:</string>
    <string name="cramps">Calambres</string>
    <string name="sting">Escozor</string>
    <string name="tingle">Hormigueo</string>
    <string name="numb">Entumecimiento</string>
    <string name="characteristics">Interpretación</string>
    <string name="other_symptom">Otro síntoma</string>
    <string name="agitating">Agitador</string>
    <string name="miserable">Miserable</string>
    <string name="annoying">Fastidioso</string>
    <string name="piercing">Penetrante</string>
    <string name="unbearable">Insoportable</string>
    <string name="fatiguing">Fatigador</string>
    <string name="time">Temporalidad</string>
    <string name="continuous">Continuo</string>
    <string name="intermittent">Intermitente</string>
    <string name="momentary">Momentáneo</string>
    <string name="when">¿Cuándo?</string>
    <string name="download">Descargar</string>
    <string name="percentage">Porcentaje de afectación</string>
    <string name="nerves">Nervios periféricos</string>
    <string name="menu">Menú</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_10">10</string>
    <string name="evaluation_already_done">Esta evaluación ya ha sido realizada en este paciente.</string>
    <string name="what_to_do">¿Qué deseas hacer?</string>
    <string name="see_patient_summary">Ver resumen del paciente</string>
    <string name="delete_overwrite">Borrar y sobrescribir evaluación</string>
    <string name="empty_field">Debe completar este campo</string>
    <string name="leaving_registry">Abandonando registro</string>
    <string name="must_draw_symptom">Debe dibujar la localización del síntoma</string>
    <string name="calculating">Calculando...</string>
    <string name="select_characteristics">Seleccione al menos una característica</string>
    <string name="downloading_csv">Descargando CSV...</string>
    <string name="back_main_menu">Volver al menú principal</string>
    <string name="no_symptom">No hay ningún síntoma que mostrar</string>
    <string name="intensity_over0">La intensidad debe ser superior a 0</string>
    <string name="download_DB">Descargar CSV</string>
    <string name="dermatomes">Raíces nerviosas</string>
</resources>