<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evaluation_already_done"
        style="@style/Small"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_to_do"
        style="@style/Small"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/blue"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="center"
                style="@style/Small"
                android:textSize="14sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="50dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:id="@+id/seeSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_patient_summary"
                android:gravity="center"
                style="@style/Small"
                android:textSize="14sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnOverwrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="50dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_overwrite"
                android:gravity="center"
                style="@style/Small"
                android:textSize="14sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>