<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".controller.activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCSV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="30dp">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/download"
        android:layout_gravity="center"
        android:contentDescription="@string/download"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Median"
                    android:text="@string/patient"
                    android:padding="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Median"
                    android:text="@string/researcher"
                    android:padding="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/etPatientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/patientCode"
                    style="@style/Median"
                    android:textColorHint="@color/dark_blue_hint"
                    android:fontFamily = "sans-serif"
                    android:importantForAutofill="no"
                    android:layout_margin="30dp"
                    android:imeOptions="actionNext"/>
                <EditText
                    android:id="@+id/etResearcherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/researcherName"
                    style="@style/Median"
                    android:textColorHint="@color/dark_blue_hint"
                    android:fontFamily = "sans-serif"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:layout_margin="30dp"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="50dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:gravity="center"
                style="@style/Median"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/next" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>