<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".controller.activities.SensorialActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvSave"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/check"
                android:layout_gravity="center"
                android:contentDescription="@string/save"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvDelete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/delete"
                android:layout_gravity="center"
                android:contentDescription="@string/cancel"/>
        </androidx.cardview.widget.CardView>
        <TextView
            style="@style/Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/localization"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingHorizontal="80dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="76dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:contentDescription="@string/brush_width"
                android:labelFor="@id/brushWidth"
                android:src="@drawable/brush" />
            <com.google.android.material.slider.Slider
                android:id="@+id/brushWidth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:rotation="270"
                android:value="1"
                android:valueFrom="0.1"
                android:valueTo="10"
                app:trackColorActive="@color/dark_blue"
                app:trackColorInactive="@color/blue"
                app:thumbColor="@color/dark_blue" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_weight="1">
            <com.mgd.painmapp.view.MapResponsiveViews
                android:id="@+id/mrvFront"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/tvFront"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"
                app:map="@drawable/front"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/mrvFront"
                app:layout_constraintEnd_toEndOf="@id/mrvFront"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="90dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:gravity="center"
                    style="@style/Small"
                    app:layout_constraintStart_toStartOf="@id/mrvFront"
                    app:layout_constraintTop_toTopOf="@id/mrvFront"
                     />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:gravity="center"
                    style="@style/Small"
                    app:layout_constraintEnd_toEndOf="@id/mrvFront"
                    app:layout_constraintTop_toTopOf="@id/mrvFront"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvFront"
                style="@style/Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/front"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mrvFront"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_weight="1">
            <com.mgd.painmapp.view.MapResponsiveViews
                android:id="@+id/mrvBack"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                app:map="@drawable/back"
                app:layout_constraintBottom_toTopOf="@id/tvBack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/mrvBack"
                app:layout_constraintEnd_toEndOf="@id/mrvBack"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="90dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:gravity="center"
                    style="@style/Small"
                    app:layout_constraintStart_toStartOf="@id/mvBack"
                    app:layout_constraintTop_toTopOf="@id/mvBack"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:gravity="center"
                    style="@style/Small"
                    app:layout_constraintEnd_toEndOf="@id/mvBack"
                    app:layout_constraintTop_toTopOf="@id/mvBack"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvBack"
                style="@style/Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mrvBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
