<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.SummaryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="30dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvMenu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/menu"
                    android:layout_gravity="center"
                    android:contentDescription="@string/menu"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvCSV"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/download"
                    android:layout_gravity="center"
                    android:contentDescription="@string/download"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/yellow"
                app:cardCornerRadius="50dp">
                <TextView
                    style="@style/Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/summary" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clTop"
            android:paddingHorizontal="70dp"
            android:paddingBottom="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    app:cardCornerRadius="50dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/percentage"
                        style="@style/Small"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow" />
                </androidx.cardview.widget.CardView>
                <TableLayout
                    android:id="@+id/tlPercentages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TableLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.mgd.painmapp.view.MapViews
                        android:id="@+id/mvFront"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="500dp"
                        android:layout_marginTop="25dp"
                        app:map="@drawable/front"/>
                    <com.mgd.painmapp.view.MapViews
                        android:id="@+id/mvBack"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="500dp"
                        android:layout_marginTop="25dp"
                        app:map="@drawable/back"/>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    app:cardCornerRadius="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/nerves"
                        style="@style/Small"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow" />
                </androidx.cardview.widget.CardView>
                <TableLayout
                    android:id="@+id/tlNerves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TableLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu"
        app:itemTextAppearance="@style/Menu"
        app:subheaderTextAppearance="@style/Menu"
        android:background="@color/dark_blue"
        app:itemTextColor="@color/yellow"
        app:itemVerticalPadding="15dp"
        android:fitsSystemWindows="true"/>
</androidx.drawerlayout.widget.DrawerLayout>